--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/j-973/odin-restaurantpage/issues"
   },
-  "homepage": "https://github.com/j-973/odin-restaurantpage#readme"
+  "homepage": "https://github.com/j-973/odin-restaurantpage#readme",
+  "devDependencies": {
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  }
 }
